# Drainbot_Debris_Detection

./: CMakeLists.txt
include/: cloud_slicing.h  generate_report.h  ground_extract.h  line_fitting_drain.h  model_evaluate.h  reconstruct.h  utils.h
src/: cloud_slicing.cpp  generate_report.cpp  ground_extract.cpp  line_fitting_drain.cpp  model_evaluate.cpp  reconstruct.cpp  utils.cpp
